--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cao_light"
-    tools:context=".MainActivity" >
+    android:background="@color/gato"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewTextoApresentacao"
