--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="48dp"
         android:textSize="22.5dp"
         android:gravity="center"
+        android:fontFamily="@font/poppins"
         android:text="@string/intro"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
