--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
                     tools:minHeight="50dp" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btnAmbos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="170dp"
