--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,16 +33,15 @@
         android:id="@+id/editTextEmail"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="184dp"
-        android:layout_marginEnd="9dp"
         android:ems="10"
         android:fontFamily="@font/poppins_bold"
         android:hint="@string/exemplo_email"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
 
@@ -52,10 +51,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="89dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/email"
-        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
@@ -66,10 +64,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="21dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/palavra_passe"
-        app:layout_constraintEnd_toStartOf="@+id/editTextPalavraPasse"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:ignore="TextContrastCheck" />
@@ -78,14 +75,13 @@
         android:id="@+id/editTextPalavraPasse"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="9dp"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
         tools:ignore="SpeakableTextPresentCheck" />
 
