--- a/app/src/main/res/layout/activity_animal_list.xml
+++ b/app/src/main/res/layout/activity_animal_list.xml
@@ -10,7 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAnimais"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
