Commit final, minimos ajustes

--- a/app/src/main/res/layout/activity_pagina_individual.xml
+++ b/app/src/main/res/layout/activity_pagina_individual.xml
@@ -94,6 +94,7 @@
         android:id="@+id/textViewNomeIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -103,6 +104,7 @@
         android:id="@+id/textViewIdadeIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -112,6 +114,7 @@
         android:id="@+id/textViewGeneroIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -121,6 +124,7 @@
         android:id="@+id/textViewRacaIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -130,6 +134,7 @@
         android:id="@+id/textViewVacinadoIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -139,6 +144,7 @@
         android:id="@+id/textViewCastradoIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -148,6 +154,7 @@
         android:id="@+id/textViewInstituicaoIndividual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="@string/placeholder_text"
         app:layout_constraintStart_toEndOf="@+id/textView13"
